--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: lox_dart
-description: A sample command-line application.
+name: luxx_dart
+description: An evolved version of the Lox language into Luxx.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
